[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/sapce.png" type="Texture" id=1]
[ext_resource path="res://images/menu.png" type="Texture" id=2]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=3]

[node name="main_menu" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2( 1000, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1024, 0 )

[node name="background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="menu" type="Sprite" parent="."]
position = Vector2( 524, 300 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 2 )

[node name="main_controls" type="Node2D" parent="."]

[node name="start_button" type="Button" parent="main_controls"]
margin_left = 415.0
margin_top = 208.0
margin_right = 530.0
margin_bottom = 249.0
rect_scale = Vector2( 2, 2 )
text = "Start Game"

[node name="high_scores_button" type="Button" parent="main_controls"]
margin_left = 415.0
margin_top = 324.0
margin_right = 529.0
margin_bottom = 365.0
rect_scale = Vector2( 2, 2 )
text = "High Scores"

[node name="options_button" type="Button" parent="main_controls"]
margin_left = 399.0
margin_top = 468.0
margin_right = 462.0
margin_bottom = 488.0
rect_scale = Vector2( 2, 2 )
text = "Options"

[node name="quit_button" type="Button" parent="main_controls"]
margin_left = 554.0
margin_top = 466.0
margin_right = 594.0
margin_bottom = 486.0
rect_scale = Vector2( 2, 2 )
text = "Quit"

[node name="options_controls" type="Node2D" parent="."]
visible = false

[node name="sfx_text" type="RichTextLabel" parent="options_controls"]
margin_left = 460.0
margin_top = 341.0
margin_right = 557.0
margin_bottom = 381.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Effects Volume"

[node name="music_text" type="RichTextLabel" parent="options_controls"]
margin_left = 458.0
margin_top = 227.0
margin_right = 555.0
margin_bottom = 267.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Music Volume"

[node name="music_slider" type="HSlider" parent="options_controls"]
margin_left = 423.0
margin_top = 250.0
margin_right = 527.0
margin_bottom = 266.0
rect_scale = Vector2( 2, 2 )

[node name="sfx_slider" type="HSlider" parent="options_controls"]
margin_left = 424.0
margin_top = 367.0
margin_right = 528.0
margin_bottom = 383.0
rect_scale = Vector2( 2, 2 )

[node name="mute_checkbox" type="CheckBox" parent="options_controls"]
margin_left = 418.0
margin_top = 469.0
margin_right = 479.0
margin_bottom = 493.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Mute"

[node name="back_button" type="Button" parent="options_controls"]
margin_left = 552.0
margin_top = 466.0
margin_right = 594.0
margin_bottom = 486.0
rect_scale = Vector2( 2, 2 )
text = "Back"

[connection signal="pressed" from="main_controls/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="main_controls/high_scores_button" to="." method="_on_high_scores_button_pressed"]
[connection signal="pressed" from="main_controls/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="main_controls/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="options_controls/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="options_controls/sfx_slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="options_controls/mute_checkbox" to="." method="_on_mute_checkbox_pressed"]
[connection signal="pressed" from="options_controls/back_button" to="." method="_on_back_button_pressed"]
